fix(26-stripe-follow-along-nav): mobile (add flex-wrap)

--- a/src/components/JavaScript30Days/26-StripeFollowAlongNav/style.css
+++ b/src/components/JavaScript30Days/26-StripeFollowAlongNav/style.css
@@ -32,6 +32,7 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
